<resources>
    <string name="app_name">TicTacToe</string>

    <string name="exitText">Exit</string>
    <string name="startGame">Start Game</string>
    <string name="empty"></string>
    <string name="player_1">Player 1</string>
    <string name="player_2">Player 2</string>
    <string name="show_resullt">Show resullt</string>
    <string name="options">Options</string>
    <string name="submit">Submit</string>
    <string name="players_names">Players Names</string>
    <string name="tic_tac_toe">Tic Tac Toe</string>
    <string name="ok">Ok</string>
    <string name="start_game_with_android">Start Game with Android</string>
    <string name="start_game_with_two_player">Start Game with two Player</string>
    <string name="android">Android</string>
    <string name="two_player">Two Player</string>
    <string name="with_android">With Android</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>


</resources>
