<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <RelativeLayout
        android:id="@+id/rlPlayerName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">
        <TextView
            android:id="@+id/txtPlayer1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/player_1"
            android:padding="10dp"
            android:gravity="center"
            android:layout_alignParentLeft="true"/>
        <TextView
            android:id="@+id/txtPlayer2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/player_2"
            android:paddingRight="50dp"
            android:paddingTop="10dp"
            android:gravity="center"
            android:layout_alignParentRight="true"/>

    </RelativeLayout>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:layout_below="@+id/rlPlayerName"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/llModeOfGame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone">

            <RadioGroup
                android:id="@+id/radioGameOfMode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioEasy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/easy"
                    android:checked="true" />

                <RadioButton
                    android:id="@+id/radioMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/medium" />

            </RadioGroup>

        </LinearLayout>
        <TextView
            android:id="@+id/txtResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_resullt"
            android:padding="10dp"
            android:layout_gravity="center"/>

        <TableLayout
            android:id="@+id/tableLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/three"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:height="@dimen/height"
                    android:text="@string/empty"
                    android:width="@dimen/width"
                    />

                <Button
                    android:id="@+id/two"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/empty"
                    android:height="@dimen/height"
                    android:width="@dimen/width"
                    />

                <Button
                    android:id="@+id/one"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/empty"
                    android:height="@dimen/height"
                    android:width="@dimen/width"
                    />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/six"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/empty"
                    android:height="@dimen/height"
                    android:width="@dimen/width"
                    />

                <Button
                    android:id="@+id/five"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/empty"
                    android:height="@dimen/height"
                    android:width="@dimen/width"
                    />
                <Button
                    android:id="@+id/four"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/empty"
                    android:height="@dimen/height"
                    android:width="@dimen/width"
                    />
            </TableRow>
            <TableRow>
                <Button
                    android:id="@+id/nine"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/empty"
                    android:height="@dimen/height"
                    android:width="@dimen/width"
                    />
                <Button
                    android:id="@+id/eight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/empty"
                    android:height="@dimen/height"
                    android:width="@dimen/width"
                    />
                <Button
                    android:id="@+id/seven"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/empty"
                    android:height="@dimen/height"
                    android:width="@dimen/width"
                    />
            </TableRow>
        </TableLayout>



    </LinearLayout>


</RelativeLayout>


</RelativeLayout>